SERVER-14261 stepdown during migration range delete can abort mongod